# flask_demo

./: .flaskenv  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
program/: __init__.py  auth.py  config.py  db.py  generator.py  models.py  routes.py  schema.sql
program/static/: main.css
program/templates/: 100days.html  base.html  index.html
program/templates/auth/: login.html  register.html
program/templates/generator/: create.html  index.html  result.html  search.html  update.html
program/templates/security/: _alt_macros.html  _macros.html  login_user.html  register_user.html
