[project]
name = "flaskr"
version = "1.0.0"
description = "A basic web app for detecting text languages."


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

dependencies = [
    "flask",
    "langid",
    "iso639-lang"
]

[project.optional-dependencies]
dev = [
  "python-dotenv == 1.0.0"
]

