[project]
name = "flaskr"
version = "1.0.0"
description = "A basic web app for detecting text languages."
requires-python = ">= 3.10"

dependencies = [
    "flask",
    "langid",
    "iso639-lang",
    "python-dotenv",
    "httpx",
    "SQLAlchemy",
    "Flask-SQLAlchemy",
    "flask-security-too",
    "bcrypt"
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["program"]

[tool.bandit]
exclude_dirs = ["tests"]


